--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="row mt-5">
     <div class="col-8 container bl-r">
       <app-header></app-header>
+      <app-table [headers]="headers" [data]="data"></app-table>
     </div>
     <div class="col-4">
       <div class="col-12">1</div>
