--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -19,7 +19,7 @@
       <td> {{item.categories}} </td>
       <td>
         <button nz-button nzType="dashed"  nzSize="default" nzShape="round"><i nz-icon nzType="edit"></i></button>
-        <button nz-button nzType="dashed" nzDanger nzSize="default" nzShape="round"><i nz-icon nzType="delete"></i></button>
+        <button nz-button nzType="dashed" nzDanger nzSize="default" nzShape="round"><i nz-icon nzType="delete" (click)="deleteRow(item)"></i></button>
       </td>
     </tr>
     </tbody>
