--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,6 @@
 <div class="col-12 d-flex justify-content-between">
   <div class="brand">Subscriptions</div>
-  <button nz-button nzType="dashed" nzShape="round" (click)="add()">+ Add</button>
+  <button nz-button nzType="dashed" nzShape="round" (click)="openDrawer()">+ Add</button>
 </div>
+
+<app-add-drawer></app-add-drawer>
