--- a/src/app/components/add-drawer/add-drawer.component.html
+++ b/src/app/components/add-drawer/add-drawer.component.html
@@ -26,7 +26,7 @@
       <nz-form-item>
         <nz-form-label [nzSpan]="4"> Next payment</nz-form-label>
         <nz-form-control [nzSpan]="12">
-          <nz-date-picker [nzFormat]="'dd.MM.YYYY'" class="w-100"></nz-date-picker>
+          <nz-date-picker [nzFormat]="'dd.MM.YYYY'" formControlName="nextPayment" class="w-100"></nz-date-picker>
         </nz-form-control>
       </nz-form-item>
     </form>
