--- a/src/app/core/input/input.component.html
+++ b/src/app/core/input/input.component.html
@@ -13,10 +13,11 @@
                     class="w-100"></nz-date-picker>
 
     <nz-select *ngIf="type === 'select'"
-               nzSize="default"
-               nzMode="multiple"
                [(ngModel)]="selectedValue"
-               [nzPlaceHolder]="placeholder">
+               [nzPlaceHolder]="placeholder"
+               nzSize="default"
+               nzMode="multiple">
+
       <nz-option *ngFor="let option of options" [nzLabel]="option.label" [nzValue]="option.value"></nz-option>
     </nz-select>
 
