--- a/src/app/components/add-drawer/add-drawer.component.html
+++ b/src/app/components/add-drawer/add-drawer.component.html
@@ -29,6 +29,7 @@
     <app-input label="Categories"
                type="select"
                placeholder="Categories"
+               [control]="form.get('categories')"
                [selectedValue]="selectedValue"
                [options]="categories"></app-input>
     <hr>
