--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -16,7 +16,9 @@
       <td> {{item.service}} </td>
       <td> {{item.price}} {{item.currency}} </td>
       <td> {{item.nextPayment}} </td>
-      <td> {{item.categories}} </td>
+      <td>
+        <nz-tag *ngFor="let tag of item.categories" [nzColor]="'magenta'"> {{tag.label}} </nz-tag>
+      </td>
       <td>
         <button nz-button nzType="dashed"  nzSize="default" nzShape="round"><i nz-icon nzType="edit"></i></button>
         <button nz-button nzType="dashed" nzDanger nzSize="default" nzShape="round"><i nz-icon nzType="delete" (click)="deleteRow(item)"></i></button>
