--- a/src/app/core/input/input.component.html
+++ b/src/app/core/input/input.component.html
@@ -15,10 +15,11 @@
     <nz-select *ngIf="type === 'select'"
                [(ngModel)]="selectedValue"
                [nzPlaceHolder]="placeholder"
+               [formControl]="control"
                nzSize="default"
                nzMode="multiple">
 
-      <nz-option *ngFor="let option of options" [nzLabel]="option.label" [nzValue]="option.value"></nz-option>
+      <nz-option *ngFor="let option of options" [nzLabel]="option.label" [nzValue]="option"></nz-option>
     </nz-select>
 
   </nz-form-control>
