--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -20,7 +20,7 @@
         <nz-tag *ngFor="let tag of item.categories" [nzColor]="'magenta'"> {{tag.label}} </nz-tag>
       </td>
       <td>
-        <button nz-button nzType="dashed"  nzSize="default" nzShape="round"><i nz-icon nzType="edit"></i></button>
+        <button nz-button nzType="dashed"  nzSize="default" nzShape="round"><i nz-icon nzType="edit" (click)="editRow(item)"></i></button>
         <button nz-button nzType="dashed" nzDanger nzSize="default" nzShape="round"><i nz-icon nzType="delete" (click)="deleteRow(item)"></i></button>
       </td>
     </tr>
