--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,4 +3,4 @@
   <button nz-button nzType="dashed" nzShape="round" (click)="openDrawer()">+ Add</button>
 </div>
 
-<app-add-drawer></app-add-drawer>
+<app-drawer></app-drawer>
