--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <app-header></app-header>
       <nz-tabset>
         <nz-tab nzTitle="Table">
-          <app-table [headers]="headers" [data]="data"></app-table>
+          <app-table [data]="data"></app-table>
         </nz-tab>
         <nz-tab nzTitle="Agenda">
           <app-timeline [data]="data"></app-timeline>
