--- a/src/app/core/form-item/form-item.component.html
+++ b/src/app/core/form-item/form-item.component.html
@@ -14,11 +14,12 @@
 
     <nz-select *ngIf="type === 'select'"
                [nzPlaceHolder]="placeholder"
-               [formControl]="control"
+               [(ngModel)]="selected"
+               (ngModelChange)="outputSelectedItems(selected)"
                nzSize="default"
-               nzMode="multiple">
+    nzMode="multiple">
 
-      <nz-option *ngFor="let option of options" [nzLabel]="option.label" [nzValue]="option"></nz-option>
+    <nz-option *ngFor="let option of options" [nzLabel]="option.label" [nzValue]="option"></nz-option>
     </nz-select>
 
   </nz-form-control>
