--- a/src/app/views/table/table.component.html
+++ b/src/app/views/table/table.component.html
@@ -21,7 +21,7 @@
       </td>
       <td>
         <button nz-button nzType="dashed"  nzSize="default" nzShape="round"><i nz-icon nzType="edit" (click)="editRow(item)"></i></button>
-        <button nz-button nzType="dashed" nzDanger nzSize="default" nzShape="round"><i nz-icon nzType="delete" (click)="deleteRow(item)"></i></button>
+        <button nz-button nzType="dashed" nzDanger nzSize="default" nzShape="round"><i nz-icon nzType="delete" (click)="confirmModal(item)"></i></button>
       </td>
     </tr>
     </tbody>
