--- a/src/app/core/form-item/form-item.component.html
+++ b/src/app/core/form-item/form-item.component.html
@@ -19,7 +19,7 @@
                nzSize="default"
                nzMode="tags">
 
-      <nz-option *ngFor="let option of options" [nzLabel]="option.label" [nzValue]="option"></nz-option>
+      <nz-option *ngFor="let option of options" [nzLabel]="option.label" [nzValue]="option.value"></nz-option>
     </nz-select>
 
   </nz-form-control>
