--- a/src/app/core/tags/tags.component.html
+++ b/src/app/core/tags/tags.component.html
@@ -1,1 +1,1 @@
-<nz-tag *ngFor="let tag of item.fullCategories" [nzColor]="'magenta'"> {{tag.label}} </nz-tag>
+<nz-tag *ngFor="let tag of item.fullCategories" [nzColor]="colors[tag.value]"> {{tag.label}} </nz-tag>
